Fix
- Added the scrollbar again to the page to allow the catalogue to be expanded fully. Band-aid fix until the catalogue gets its own scrollbar.

--- a/src/main/webapp/styles/stylesheet.css
+++ b/src/main/webapp/styles/stylesheet.css
@@ -2,7 +2,7 @@
 html, body{
 	height: 100% !important;
 	margin: 0;
-	overflow: hidden;
+	/* overflow: hidden; */
 }
 
 #header, #toolbar{
@@ -271,8 +271,7 @@ li.nav-item {
 
 .just-padding {
 	padding: 15px;
-	
-  }
+}
   
 /* Formatting for the entire list/catalogue */
 .list-group.list-group-root {
